// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly 1`] = `
<React.Fragment>
  <ForwardRef
    menuAction={[Function]}
  />
  <NavDrawer
    closeFunc={[Function]}
    isOpen={false}
  />
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    component={[Function]}
    path="/about"
  />
  <Route
    component={[Function]}
    path="/faq"
  />
  <Route
    component={[Function]}
    path="/report"
  />
  <Route
    component={[Function]}
    path="/contact"
  />
</React.Fragment>
`;

exports[`App should toggle navigation 1`] = `
<React.Fragment>
  <ForwardRef
    menuAction={[Function]}
  />
  <NavDrawer
    closeFunc={[Function]}
    isOpen={true}
  />
  <Route
    exact={true}
    path="/"
    render={[Function]}
  />
  <Route
    component={[Function]}
    path="/about"
  />
  <Route
    component={[Function]}
    path="/faq"
  />
  <Route
    component={[Function]}
    path="/report"
  />
  <Route
    component={[Function]}
    path="/contact"
  />
</React.Fragment>
`;
